--- a/style.css
+++ b/style.css
@@ -8,6 +8,18 @@
   float: none;
   margin-left: auto;
   margin-right: auto;
+  max-width: 85%;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .break {
@@ -327,15 +339,13 @@ li a {
 }
 .portfolio-projects--btn {
   background: transparent;
-  color: #a215d8;
-  border: 1px solid #a215d8;
-  border-radius: 5px;
+  color: black;
   margin-bottom: 1.25em;
-  padding-left: 15%;
-  padding-right: 15%;
+  margin-top: 1.25em;
+  text-align: center;
 }
 .portfolio-projects--btn:hover {
-  background: #a215d8;
+  background: transparent;
   color: #f0f0e6;
 }
 .portfolio-projects--image {
@@ -471,6 +481,8 @@ li a {
   text-align: center;
   color: #a215d8;
   font-size: 22px;
+  padding-bottom: 1%;
+  font-style: italic;
 }
 
 .profile-img {
@@ -480,6 +492,7 @@ li a {
 .contact-header {
   margin-bottom: 2%;
   margin-top: 5%;
+  padding-top: 5%;
 }
 
 .contact-email {
@@ -492,4 +505,8 @@ li a {
   margin-bottom: 5%;
   margin-top: 5%;
   text-align: center;
+}
+
+.spaceend {
+  margin-bottom: 5%;
 }
