--- a/style.css
+++ b/style.css
@@ -1,512 +1,44 @@
-@import url("https://fonts.googleapis.com/css?family=Comfortaa:400,700,300|Quattrocento");
-.about-tools ul li,
-.contact-social-icons ul a li {
+.kategorie {
+  color: brown;
+  background-color: yellow;
+  margin: 2cm;
+  border: 5px solid black;
   text-align: center;
 }
 
-.centered {
-  float: none;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 85%;
-  margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-.break {
-  clear: both;
-  margin-top: 10px;
-}
-
-@media (min-width: 768px) {
-  .pull-right-sm {
-    float: right !important;
-  }
-
-  .pull-left-sm {
-    float: left !important;
-  }
-}
-@media (min-width: 992px) {
-  .pull-right-md {
-    float: right !important;
-  }
-
-  .pull-left-md {
-    float: left !important;
-  }
-}
-@media (min-width: 1200px) {
-  .pull-right-lg {
-    float: right !important;
-  }
-
-  .pull-left-lg {
-    float: left !important;
-  }
-}
-* {
-  box-sizing: border-box;
-}
-
-html {
-  position: relative;
-  height: 100%;
-}
-
-img {
-  width: 60%;
-}
-
-body {
-  height: 100%;
-  font-family: "Comfortaa", Helvetica, Arial, sans-serif;
-  background-color: #000000;
-  padding-left: 5%;
-  padding-right: 5%;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: "Comfortaa", Helvetica, Arial, sans-serif;
-  color: #a215d8;
-  text-align: center;
-  padding-left: 15%;
-  padding-right: 15%;
-}
 h1 {
-  font-size: 40px;
-}
-
-p {
-  font-family: "Quattrocento", sans-serif;
-  color: #a215d8;
   text-align: center;
-  padding-left: 15%;
-  padding-right: 15%;
-}
-
-body > .container-fluid {
-  padding: 60px 15px 0;
-}
-
-.container-fluid .text-muted {
-  margin: 20px 0;
-}
-
-.btn:focus,
-a:focus {
-  outline: none !important;
+  color: blue;
 }
 
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.navbar {
-  height: 70px;
-  background-color: #150050;
-  background: #150050;
-  border: none;
-  color: #150050;
-  z-index: 100;
-  margin-bottom: 0;
-  border-radius: 0;
-  transition: background-color 1s ease 0s;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.navbar-brand {
-  display: none;
-  margin-top: 10px;
-  color: white;
-  font-weight: 400;
-}
-
-.navbar-default .navbar-nav > li > a {
-  color: white;
-  font-weight: 500;
-  font-size: 1em;
-  text-transform: lowercase;
-  margin: 10px 5px 5px 5px;
-  border-radius: 5px;
-}
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:active,
-.navbar-default .navbar-nav > li > a:focus {
-  color: #f0f0e6;
-  border: 1px solid #f0f0e6;
-}
-.navbar-default .navbar-nav > li > a:visited {
-  color: #f0f0e6;
-  text-decoration: none;
-}
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-  background-color: transparent;
-  color: #f0f0e6;
-}
-.navbar-default .navbar-toggle {
-  border-color: #f0f0e6;
-}
-.navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:focus {
-  background-color: #07374a;
-}
-.navbar-default .navbar-toggle .icon-bar {
-  color: #f0f0e6;
-  background-color: #f0f0e6;
-}
-.navbar-default .navbar-collapse.collapse.in ul {
-  background-color: #07374a;
-}
-
-/* Solid class attached on scroll past first section */
-.navbar.solid {
-  background-color: #07374a;
-  transition: background-color 1s ease 0s;
-  box-shadow: 0 0 4px rgba(7, 55, 74, 0.2);
-}
-.navbar.solid .navbar-brand {
-  display: inline-block;
-  color: #f0f0e6;
-  transition: color 1s ease 0s;
-}
-.navbar.solid .navbar-nav > li > a {
-  color: #f0f0e6;
-  transition: color 1s ease 0s;
-}
-
-.cover {
-  padding: 10% 0 10% 0;
-}
-.cover.top {
-  padding: 15% 0 10% 0;
-  height: 100vh;
-  display: flex;
-  background-color: #3f0071;
-}
-.cover.bottom {
-  padding: 10% 0 10% 0;
-}
-
-.headline {
-  padding-top: 6.25em;
-  text-align: left;
-}
-@media screen and (min-width: 60%) {
-  .headline {
-    padding-top: 3.75em;
-  }
-}
-@media screen and (min-width: 60%) {
-  .headline {
-    padding-top: 1.5625em;
-  }
-}
-@media screen and (min-width: 60%) {
-  .headline {
-    padding-top: 0px;
-  }
-}
-
-#about {
-  background-color: #07374a;
-}
-#about h2 {
-  color: #25b79f;
-}
-
-.profile-img {
-  margin-bottom: 15px;
-  width: 30%;
-  border-radius: 100%;
-  display: block;
-  margin: 0 auto;
-}
-
-.about,
-.about-info,
-.about-tools,
-.about-last {
-  padding: 4% 10% 1% 10%;
-  font-size: 1.25em;
-}
-.about-tools {
-  padding-top: 4.375em;
-  font-weight: 700;
-  font-size: 1.5em;
-}
-@media screen and (min-width: 60%) {
-  .about-tools {
-    padding-top: 5.625em;
-  }
-}
-.about-tools ul:first-child {
-  padding-left: 0px;
-}
-.about-tools ul {
-  color: #25b79f;
   list-style: none;
 }
-.about-tools ul li {
-  padding-top: 0.75em;
-}
-.about-last {
-  padding-top: 3.125em;
-  padding-bottom: 0;
-  font-size: 1.125em;
-}
-@media screen and (min-width: 992px) {
-  .about-last {
-    padding-top: 0;
-  }
-}
-.about-last p {
-  color: #25b79f;
+
+.kategorie label {
+  display: block;
+  margin-bottom: 10px;
 }
 
-#portfolio {
-  background-color: #291665;
-}
-#portfolio h2 {
-  padding-bottom: 1.25em;
-}
-
-@media screen and (min-width: 768px) {
-  .portfolio-projects {
-    margin-top: 0.625em;
-  }
-}
-.portfolio-projects--title {
-  margin-top: 0.9375em;
-  font-family: "Comfortaa", Helvetica, Arial, sans-serif;
-  color: #a215d8;
-  padding-left: 15%;
-  padding-right: 15%;
-  font-size: 22px;
-  text-decoration: underline;
-}
-@media screen and (min-width: 768px) {
-  .portfolio-projects--title {
-    margin-top: 15%;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .portfolio-projects--title {
-    margin-top: 5%;
-  }
-}
-@media screen and (min-width: 768px) {
-  .portfolio-projects--desc {
-    margin-top: 2%;
-    margin-bottom: 2%;
-    font-family: "Quattrocento", sans-serif;
-    color: #a215d8;
-    padding-left: 15%;
-    padding-right: 15%;
-  }
-}
-.portfolio-projects--btn {
-  background: transparent;
-  color: black;
-  margin-bottom: 1.25em;
-  margin-top: 1.25em;
-  text-align: center;
-}
-.portfolio-projects--btn:hover {
-  background: transparent;
-  color: #f0f0e6;
-}
-.portfolio-projects--image {
-  margin-bottom: 1.875em;
-  padding-top: 5%;
-  padding-left: 15%;
-  padding-right: 15%;
-}
-
-.portfolio-projects--image-left {
-  margin-bottom: 1.875em;
-  padding-top: 5%;
-  max-width: 500px;
-  width: 500px;
-  padding-left: 15%;
-  float: left;
-}
-
-.portfolio-projects--image-right {
-  margin-bottom: 1.875em;
-  padding-top: 5%;
-  max-width: 500px;
-  width: 500px;
-  padding-right: 15%;
-}
-
-#contact {
-  background-color: #07374a;
-}
-#contact h2 {
-  color: #25b79f;
-}
-
-.contact-social-icons p {
-  color: #25b79f;
-}
-.contact-social-icons ul a {
-  color: #25b79f;
-  list-style: none;
-}
-.contact-social-icons ul a:hover {
-  color: #f0f0e6;
-}
-.contact-social-icons ul a li {
-  display: inline-block;
-  padding: 2%;
-}
-
-.footer {
-  bottom: 0;
+.kategorie select {
+  display: block;
   width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 30px;
-  background-color: #07374a;
-  color: #f0f0e6;
-}
-
-#scrollIcon,
-#scrollTopIcon {
-  margin-top: 200px;
   padding: 10px;
-  font-size: 1.5em;
-  color: #07374a;
-  border: solid 2px #07374a;
-  border-radius: 50%;
-}
-
-#scrollTopIcon {
-  margin-top: 10px;
-  font-size: 1em;
-  color: #f0f0e6;
-  border-color: #f0f0e6;
-}
-
-.back-to-top {
-  display: none;
-}
-.back-to-top.visible {
-  display: block;
-}
-
-@media (min-width: 720px) {
-  .champions {
-    width: 100%;
-    background-image: url(./Champions\ League.jpg);
-    border: 3px solid black;
-    height: 100%;
-  }
-}
-
-.logo {
-  width: 200px;
-  height: 200px;
-  border-radius: 100%;
-  border-style: double;
-  border-color: #000000;
-  align-content: center;
-  display: block;
-  margin: 0 auto;
-  justify-content: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+  font-size: 16px;
+  color: #333;
   margin-bottom: 20px;
-  margin-top: 20px;
 }
 
-.lead {
-  font-size: 20px;
-}
-
-.top:hover .background {
-  animation: einziehenlinks 1s ease-in forwards;
-}
-
-.top:hover .lead {
-  animation: einziehenlinks 1s ease-in forwards;
-}
-
-@keyframes einziehenlinks {
-  0% {
-    transform: translateX(-100%);
-  }
-
-  100% {
-    transform: translateX(13%);
-  }
-}
-
-.wholepage {
-  background-color: black;
-}
-
-.links {
-  padding-top: 5%;
+button {
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
   text-align: center;
-  color: #a215d8;
-  font-size: 22px;
-  padding-bottom: 1%;
-  font-style: italic;
-}
-
-.profile-img {
-  margin-bottom: 5%;
-}
-
-.contact-header {
-  margin-bottom: 2%;
-  margin-top: 5%;
-  padding-top: 5%;
-}
-
-.contact-email {
-  margin-bottom: 2%;
-  margin-top: 2%;
-  font-size: 22px;
-}
-
-.contact-social-icons {
-  margin-bottom: 5%;
-  margin-top: 5%;
-  text-align: center;
-}
-
-.spaceend {
-  margin-bottom: 5%;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
